--- a/example/test.html
+++ b/example/test.html
@@ -24,7 +24,7 @@
                 rate:300,//以毫秒为单位的数值，闪烁时间间隔
             },
 
-            sound:true,//是否支持声音提示
+            sound:false,//是否支持声音提示
             sound_option:{
                 src:'',//声音文件地址
             },
